// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColorScheme() > returns the correct values 1`] = `
{
  "contrastColors": [
    {
      "background": "#85794e",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#84794e",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#3e5040",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#243618",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#121d08",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#000000",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#847853",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#534b34",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#363022",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#1d1a12",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#000000",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#61806a",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#385231",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#223618",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#121d0d",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#000000",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#668242",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#4a4e28",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#35311b",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#1c1a0f",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#000000",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#c25b33",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#82311f",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#562014",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#2f110b",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#000000",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#80795b",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#524c29",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#33321a",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#181c0d",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#000000",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#698052",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#385326",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#253430",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#141c1b",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#000000",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#000000",
        },
      ],
    },
  ],
  "terminal": [
    "#85794e",
    "#534b34",
    "#385231",
    "#4a4e28",
    "#82311f",
    "#524c29",
    "#385326",
    "#243618",
    "#3e5040",
    "#000000",
    "#000000",
    "#000000",
    "#000000",
    "#000000",
    "#000000",
    "#000000",
  ],
}
`;

exports[`generateColorScheme() > returns the correct values 2`] = `
{
  "contrastColors": [
    {
      "background": "#8d8972",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#8c8873",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#585953",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#4a3c2d",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#3b2715",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#21160c",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#848980",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#565a51",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#3d4037",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#2a2c24",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#181912",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#888979",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#595a47",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#3e402d",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#2b2c1b",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#18190f",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#b27976",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#a22d38",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#742028",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#52161c",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#300d11",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#958672",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#6a5539",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#791a20",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#551216",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#320b0d",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#7e8a88",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#555a52",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#3f3f35",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#2e2b1e",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#1d180a",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#000000",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#88897c",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#585a47",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#423f2c",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#352916",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#221608",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#000000",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#000000",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#000000",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#000000",
        },
      ],
    },
  ],
  "terminal": [
    "#8d8972",
    "#565a51",
    "#595a47",
    "#a22d38",
    "#6a5539",
    "#555a52",
    "#585a47",
    "#4a3c2d",
    "#585953",
    "#181912",
    "#18190f",
    "#300d11",
    "#320b0d",
    "#1d180a",
    "#221608",
    "#000000",
  ],
}
`;
